--- a/domminos-pizza/package.json
+++ b/domminos-pizza/package.json
@@ -1,63 +1,69 @@
 {
-  "name": "domminos-pizza",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "concurrently \"node --run dev:codegen\" \"node --rundev:vite\"",
-    "dev:vite": "vite",
-    "dev:codegen": "node --run codegen -- --watch",
-    "build": "node --run codegen && tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "format": "prettier --check .",
-    "format:fix": "node --run format -- --write",
-    "server": "tsx watch server.ts",
-    "codegen": "graphql-codegen"
-  },
-  "dependencies": {
-    "@apollo/server": "^5.0.0",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.13",
-    "@vitest/browser": "^3.2.4",
-    "add": "^2.0.6",
-    "button": "^1.1.1",
-    "class-variance-authority": "^0.7.1",
-    "graphql": "^16.11.0",
-    "init": "^0.1.2",
-    "json-server": "^1.0.0-beta.3",
-    "playwright": "^1.55.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-error-boundary": "^6.0.0",
-    "react-router": "^7.9.1",
-    "shadcn": "^3.3.1",
-    "tailwind-merge": "^3.3.1",
-    "urql": "^5.0.1",
-    "vitest": "^3.2.4",
-    "vitest-browser-react": "^1.0.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@graphql-codegen/cli": "^6.0.0",
-    "@graphql-codegen/client-preset": "^5.0.1",
-    "@parcel/watcher": "^2.5.1",
-    "@types/node": "^24.5.1",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react-swc": "^4.0.0",
-    "autoprefixer": "^10.4.21",
-    "concurrently": "^9.2.1",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "postcss": "^8.5.6",
-    "prettier": "3.6.2",
-    "rimraf": "^6.0.1",
-    "tsx": "^4.20.5",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
-  }
+    "name": "domminos-pizza",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "concurrently \"node --run dev:codegen\" \"node --rundev:vite\"",
+        "dev:vite": "vite",
+        "dev:codegen": "node --run codegen -- --watch",
+        "build": "node --run codegen && tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "format": "prettier --check .",
+        "format:fix": "node --run format -- --write",
+        "server": "tsx watch server.ts",
+        "codegen": "graphql-codegen"
+    },
+    "dependencies": {
+        "@apollo/server": "^5.0.0",
+        "@hookform/resolvers": "^5.2.2",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@tailwindcss/vite": "^4.1.13",
+        "@vitest/browser": "^3.2.4",
+        "add": "^2.0.6",
+        "button": "^1.1.1",
+        "class-variance-authority": "^0.7.1",
+        "graphql": "^16.11.0",
+        "init": "^0.1.2",
+        "json-server": "^1.0.0-beta.3",
+        "playwright": "^1.55.0",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
+        "react-error-boundary": "^6.0.0",
+        "react-hook-form": "^7.62.0",
+        "react-router": "^7.9.1",
+        "shadcn": "^3.3.1",
+        "tailwind-merge": "^3.3.1",
+        "urql": "^5.0.1",
+        "vitest": "^3.2.4",
+        "vitest-browser-react": "^1.0.1",
+        "zod": "^4.1.9"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.33.0",
+        "@graphql-codegen/cli": "^6.0.0",
+        "@graphql-codegen/client-preset": "^5.0.1",
+        "@parcel/watcher": "^2.5.1",
+        "@types/node": "^24.5.1",
+        "@types/react": "^19.1.10",
+        "@types/react-dom": "^19.1.7",
+        "@vitejs/plugin-react-swc": "^4.0.0",
+        "autoprefixer": "^10.4.21",
+        "concurrently": "^9.2.1",
+        "eslint": "^9.33.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.20",
+        "globals": "^16.3.0",
+        "postcss": "^8.5.6",
+        "prettier": "3.6.2",
+        "prettier-plugin-organize-imports": "^4.3.0",
+        "prettier-plugin-tailwindcss": "^0.6.14",
+        "rimraf": "^6.0.1",
+        "tsx": "^4.20.5",
+        "typescript": "~5.8.3",
+        "typescript-eslint": "^8.39.1",
+        "vite": "^7.1.2"
+    }
 }
