--- a/domminos-pizza/package.json
+++ b/domminos-pizza/package.json
@@ -20,6 +20,7 @@
         "@hookform/resolvers": "^5.2.2",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-slot": "^1.2.3",
+        "@reduxjs/toolkit": "^2.9.0",
         "@tailwindcss/vite": "^4.1.13",
         "@vitest/browser": "^3.2.4",
         "add": "^2.0.6",
@@ -33,6 +34,7 @@
         "react-dom": "^19.1.1",
         "react-error-boundary": "^6.0.0",
         "react-hook-form": "^7.62.0",
+        "react-redux": "^9.2.0",
         "react-router": "^7.9.1",
         "shadcn": "^3.3.1",
         "tailwind-merge": "^3.3.1",
